# cdba

./: .gitignore  99-libftdi.rules  LICENSE  Makefile  README  alpaca.c  alpaca.h  bad.c  bad.h  camera.c  camera.h  cdb_assist.c  cdb_assist.h  cdba-client.c  cdba-client.h  cdba-power.c  cdba-server-standalone.c  cdba-server-standalone.h  cdba-server.c  cdba-server.h  cdba-standalone.c  cdba-standalone.h  cdba.c  cdba.h  circ_buf.c  circ_buf.h  conmux.c  conmux.h  console.c  console.h  device.c  device.h  device_parser.c  device_parser.h  fastboot.c  fastboot.h  ftdi-gpio.c  ftdi-gpio.h  list.h  local-gpio.c  (+20 more)
.github/workflows/: ci.yml  codeql-analysis.yml  yaml.yml
ci/: alpine.sh  archlinux.sh  debian.cross-compile.sh  debian.i386.sh  debian.sh  fedora.sh
config-samples/: sample1.yaml  sample10.yaml  sample11.yaml  sample12.yaml  sample2.yaml  sample3.yaml  sample4.yaml  sample5.yaml  sample6.yaml  sample7.yaml  sample8.yaml  sample9.yaml
drivers/: alpaca.c  cdb_assist.c  conmux.c  external.c  ftdi-gpio.c  laurent.c  local-gpio-v1.c  local-gpio-v2.c  local-gpio.c  local-gpio.h  qcomlt_dbg.c
examples/: cdba.quartz64.yaml
shell/: README  cdba-shell  post-receive  setup.sh  update
